<resources>
    <string name="app_name">AKLAT</string>
    <string name="title_activity_category_meals">CategoryMealsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>
</resources>