<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealDetails">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="#fff"
            >

            <ImageView
                android:id="@+id/meal_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                >
                <ImageView
                    android:id="@+id/back_btn"
                    android:onClick="onComponentsClick"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_back"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/fav"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_heart_outline"
                android:layout_gravity="center"
                android:contentDescription="nofav"
                android:onClick="onComponentsClick"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:elevation="5dp"
                    android:background="@drawable/category_element_style"
                    android:padding="7dp"
                    android:layout_margin="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category"
                            android:textColor="#c00"
                            android:textSize="20sp"
                            android:layout_gravity="center_horizontal"
                         />
                    <TextView
                        android:id="@+id/meal_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="- - -"
                        android:textColor="#000"
                        android:textSize="22dp"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:elevation="5dp"
                    android:background="@drawable/category_element_style"
                    android:padding="7dp"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:textColor="#c00"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:id="@+id/meal_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="- - -"
                        android:textColor="#000"
                        android:textSize="22dp"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/category_element_style"
                android:orientation="vertical"
                android:elevation="5dp"
                android:padding="20dp"
                android:layout_margin="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions"
                    android:textColor="#c00"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                />
                <TextView
                    android:id="@+id/meal_inst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:text="- - -"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/category_element_style"
                android:orientation="vertical"
                android:elevation="5dp"
                android:padding="20dp"
                android:layout_margin="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textColor="#c00"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/meal_ing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:text="- - -"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:id="@+id/youtube_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:background="@drawable/category_element_style"
                    android:elevation="7dp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    >
                    <ImageView
                        android:layout_weight="0.65"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/ic_youtube"
                        android:layout_marginEnd="10dp" />
                    <TextView
                        android:layout_weight="1.5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/youtube"
                        android:textSize="30dp"
                        android:textColor="#a00"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/source_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:background="@drawable/category_element_style"
                    android:elevation="7dp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    >
                    <ImageView
                        android:layout_weight="0.65"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/ic_link"
                        android:layout_marginEnd="10dp" />
                    <TextView
                        android:layout_weight="1.5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/source"
                        android:textSize="30dp"
                        android:layout_gravity="center_vertical"
                        android:textColor="#a00"
                        />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>